practise/log.txt
[INFO] Scanning for projects...
[INFO] ------------------------------------------------------------------------
[INFO] Building gallary-webapp Maven Webapp
[INFO]    task-segment: [clean, install]
[INFO] ------------------------------------------------------------------------
[INFO] [clean:clean {execution: default-clean}]
[INFO] Deleting directory D:\practise\TechConf\practise\target
[INFO] [resources:resources {execution: default-resources}]
[WARNING] Using platform encoding (Cp1252 actually) to copy filtered resources, i.e. build is platform dependent!
[INFO] Copying 0 resource
[INFO] [compiler:compile {execution: default-compile}]
[INFO] Compiling 11 source files to D:\practise\TechConf\practise\target\classes
[INFO] ------------------------------------------------------------------------
[ERROR] BUILD FAILURE
[INFO] ------------------------------------------------------------------------
[INFO] Compilation failure

D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\Exhibition.java:[10,2] error: annotations are not supported in -source 1.3

could not parse error message:   (use -source 5 or higher to enable annotations)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\Exhibition.java:14: error: generics are not supported in -source 1.3
	private List<ArtEntity> artEntitys;
	            ^

could not parse error message:   (use -source 5 or higher to enable generics)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\ArtEntity.java:11: error: annotations are not supported in -source 1.3
	@Id
	 ^

could not parse error message:   (use -source 5 or higher to enable annotations)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\ArtEntity.java:15: error: generics are not supported in -source 1.3
	private List<Tag> tags;
	            ^

could not parse error message:   (use -source 5 or higher to enable generics)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\Tag.java:8: error: annotations are not supported in -source 1.3
@Entity
 ^

could not parse error message:   (use -source 5 or higher to enable annotations)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\RoleLevel.java:9: error: annotations are not supported in -source 1.3
	@Id
	 ^

could not parse error message:   (use -source 5 or higher to enable annotations)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\Catagory.java:10: error: annotations are not supported in -source 1.3
	@Id
	 ^

could not parse error message:   (use -source 5 or higher to enable annotations)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\Person.java:10: error: annotations are not supported in -source 1.3
@Entity
 ^

could not parse error message:   (use -source 5 or higher to enable annotations)
D:\practise\TechConf\practise\src\main\java\com\artgallery\domain\Comment.java:10: error: annotations are not supported in -source 1.3
	@Id
	 ^


[INFO] ------------------------------------------------------------------------
[INFO] For more information, run Maven with the -e switch
[INFO] ------------------------------------------------------------------------
[INFO] Total time: 2 seconds
[INFO] Finished at: Thu Nov 19 16:19:43 IST 2015
[INFO] Final Memory: 12M/155M
[INFO] ------------------------------------------------------------------------
